--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header><h1>Brother</h1></header>
+    <header><h1>Brother2</h1></header>
     <main>
 
     </main>    
